    for reading in several coordinates files [Roberto Steiner].

  o CHANGE: SEGIDs are more intelligently inherited [Steven Sheriff,
    Bob Nolte]

  o CHANGE: Ramachandran Plots now have molecule name labels [Wendy Offen].

  o CHANGE: The save coordinates dialogs active item is the first
    molecule with unsaved changes (rather than simply the first
    molecule) [Herb Klei]

  o BUG-FIX: TER records are removed on addition of waters [Herb Klei].

  o BUG-FIX: Single HETATMs now are refined by rigid body (as waters
    are) when using Refine Zone.

  o BUG-FIX: new atoms (and waters) are added as HETATMs if
    appropriate [David Mathog].

  o BUG-FIX: TER records for water chains are no longer tested in
    water validation tests [Herb Klei].

  o BUG-FIX: NCS chain jumping now works on heterodimers [Jianghai Zhu].

  o BUG-FIX: The Chain Reordering function in Extensions has been fixed.

-----

Release 0.5.2 Uneno

   o BUG-FIX: Fix annoying shift-key-labels-atoms bug

Release 0.5.1 Uneno

   o FEATURE: A "Delete Molecule" button is now available in the
     Display Manager [TJS].

   o FEATURE: show-rotamer-dialog is now available from the scripting
     layer (hence `quick rotamer' keybinding) [FvD].

   o FEATURE: Manual definition of NCS ghost matrices - GUI added.

   o FEATURE: overlay-my-ligands function introduced.

   o FEATURE: A simple interface to electrostatic surfaces has been
     introduced (Extensions -> Representations).

   o FEATURE: rotate-chi feature introduced.  For use with a PowerMate.

   o FEATURE: keyboard-based Go To Residue for quicker navigation.

   o CHANGE: NCS ghost work using LSQ to get the matrix, not SSM.
 
   o CHANGE: Display manager toggle buttons replaced with check
     buttons.

   o CHANGE: make-dynamically-transformed-ncs-maps takes an extra
     argument specifying if new maps should overwrite previous maps of
     the same name.

   o CHANGE: Extensions menu re-worked.
