@@ -35,6 +35,9 @@ Pre-release 0.6
     molecule with unsaved changes (rather than simply the first
     molecule) [Herb Klei]
 
+  o CHANGE: "Go To Blob" now goes to the front blob, no matter what
+    the density level of blobs/density behind it is [JED].
+
   o BUG-FIX: TER records are removed on addition of waters [Herb Klei].
 
   o BUG-FIX: Single HETATMs now are refined by rigid body (as waters
